hover animations for navigation icons

--- a/components/navigation-button.module.css
+++ b/components/navigation-button.module.css
@@ -5,6 +5,7 @@
   border-radius: 99px;
   display: flex;
   align-items: center;
+  transition: var(--fade);
 
   &:hover {
     background-color: var(--c-theme-20);
